Add hero section

--- a/index.html
+++ b/index.html
@@ -8,3 +8,19 @@
   <p>This is my first GitHub Pages site.</p>
 </body>
 </html>
+
+ <body> 
+        <p>links to other pages:
+        </p>
+        <a href="contact.html"> 
+            Contact me <br>
+        </a>
+        <a href="cv.html">
+            My cv <br>
+        </a>
+        <a href="hobbies.html">
+            My hobbies <br>
+        </a>
+    </body>
+
+    
