Change title to My Site in feature/theme

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My First GitHub Page</title>
+  <title>My Site</title>
 </head>
 <body>
   <h1>Hello, world!</h1>
@@ -23,4 +23,3 @@
         </a>
     </body>
 
-    
